@@ -130,6 +130,13 @@ gvg_traps_target_all: 1
 //    (Invisible traps can be revealed through Hunter's Detecting skill)
 traps_setting: 0
 
+// Restrictions applied to the Alchemist's Summon Flora skill (add as necessary)
+// 1: Enable players to damage the floras outside of versus grounds.
+// 3: Disable having different types out at the same time
+//    (eg: forbid summoning anything except hydras when there's already 
+//     one hydra out)
+summon_flora_setting: 3
+
 // Whether placed down skills will check walls (Note 1)
 // (Makes it so that Storm Gust/Lord of Vermillion/etc when casted next to a wall, won't hit on the other side) 
 skill_wall_check: yes
